feat: Complete SEN GP platform with deployment configuration
- Add complete backend API with TypeScript/Express/PostgreSQL
- Implement authentication with JWT and social OAuth (Google/Facebook)
- Create Expediteur dashboard with mission creation and tracking
- Create GP dashboard with trip creation and mission matching
- Add claims management system for both user types
- Configure backend to serve frontend in production
- Add Render.com deployment configuration (render.yaml)
- Create comprehensive documentation (README, QUICK_START, DEPLOYMENT guides)
- Implement QR code generation for shipment tracking
- Add real-time notifications system
- Configure Capacitor for iOS/Android mobile apps

🚀 Ready for deployment on Render.com

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
 .vercel
+node_modules/
+dist/
+.DS_Store
+*.log
+.vscode/
+.idea/
+
+# Capacitor
+android/
+ios/
+*.keystore
+*.jks
+
+# Environment variables
+.env
+.env.local
+.env.production
+
+# Build files
+build/
+www/
