fix: Change database type from pgsql to postgres in render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   # PostgreSQL Database
-  - type: pgsql
+  - type: postgres
     name: sengp-db
     databaseName: sengp_production
     plan: free
