--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   # PostgreSQL Database
-  - type: postgres
+  - type: database
     name: sengp-db
     databaseName: sengp_production
     plan: free
@@ -34,4 +34,5 @@ services:
       - key: BCRYPT_ROUNDS
         value: 10
     autoDeploy: true
+
 
