--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,9 @@
 services:
-  # PostgreSQL Database
-  - type: postgres
-    name: sengp-db
-    databaseName: sengp_production
-    plan: free
-    ipAllowList: []
-
   # Backend + Frontend Web Service
   - type: web
     name: sengp-api
     env: node
+    region: frankfurt
     plan: free
     buildCommand: npm run build:all
     startCommand: cd backend && npm start
@@ -21,16 +15,18 @@ services:
         value: 10000
       - key: API_VERSION
         value: v1
-      - key: DATABASE_URL
-        fromDatabase:
-          name: sengp-db
-          property: connectionString
       - key: JWT_SECRET
         generateValue: true
       - key: JWT_REFRESH_SECRET
         generateValue: true
       - key: FRONTEND_URL
-        value: https://sengp-api.onrender.com
+        sync: false
       - key: BCRYPT_ROUNDS
         value: 10
-    autoDeploy: true
+
+databases:
+  - name: sengp-db
+    databaseName: sengp_production
+    user: sengp_user
+    plan: free
+    region: frankfurt
