--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ PORT=5000
 API_VERSION=v1
 
 # Database Configuration
-DATABASE_URL=postgresql://user:password@localhost:5432/sengp_dev
+DATABASE_URL= postgresql://postgres:dAryYjzDMyvniiholJCvMcobekiwMIwa@sengp-db.railway.internal:5432/railway
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=sengp_dev
@@ -18,7 +18,7 @@ JWT_EXPIRES_IN=1d
 JWT_REFRESH_EXPIRES_IN=7d
 
 # CORS Configuration
-FRONTEND_URL=http://localhost:8100,http://localhost:3000
+FRONTEND_URL=sengp-api-production-d4a3.up.railway.app
 
 # Security
 BCRYPT_ROUNDS=10
@@ -57,3 +57,4 @@ LOG_FILE=./logs/app.log
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+
