--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sengp-backend",
   "version": "1.0.0",
-  "description": "SEN GP Backend API - Plateforme de gestion des colis au S\u00e9n\u00e9gal",
+  "description": "SEN GP Backend API - Plateforme de gestion des colis au Sénégal",
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
@@ -17,54 +17,60 @@
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write \"src/**/*.ts\""
   },
-  "keywords": ["sengp", "logistics", "senegal", "api"],
+  "keywords": [
+    "sengp",
+    "logistics",
+    "senegal",
+    "api"
+  ],
   "author": "SEN GP Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "pg-pool": "^3.6.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.0.1",
-    "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.1",
-    "qrcode": "^1.5.3",
-    "nodemailer": "^6.9.7",
-    "twilio": "^4.19.3",
-    "socket.io": "^4.6.0",
-    "redis": "^4.6.12",
     "aws-sdk": "^2.1515.0",
     "axios": "^1.6.2",
-    "morgan": "^1.10.0",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "pg": "^8.11.3",
+    "pg-pool": "^3.6.1",
+    "qrcode": "^1.5.3",
+    "redis": "^4.6.12",
+    "socket.io": "^4.6.0",
+    "twilio": "^4.19.3",
+    "uuid": "^9.0.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.6",
+    "@flydotio/dockerfile": "^0.7.10",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/cors": "^2.8.17",
-    "@types/multer": "^1.4.11",
-    "@types/uuid": "^9.0.7",
-    "@types/qrcode": "^1.5.5",
-    "@types/nodemailer": "^6.4.14",
-    "@types/morgan": "^1.9.9",
     "@types/compression": "^1.7.5",
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.2",
-    "nodemon": "^3.0.2",
-    "node-pg-migrate": "^6.2.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.6",
+    "@types/nodemailer": "^6.4.14",
+    "@types/qrcode": "^1.5.5",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
-    "prettier": "^3.1.1",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.11"
+    "node-pg-migrate": "^6.2.2",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
